--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,12 @@
 {
   "extends": "eslint-config-egg/typescript",
+  "rules": {
+    "indent": "off",
+    "@typescript-eslint/semi": ["off", "always"],
+    "@typescript-eslint/no-unused-vars": 0,
+    "comma-dangle": 0,
+    "no-unused-vars": "off"
+  },
   "parserOptions": {
     "project": "./tsconfig.json"
   }
