--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "clean": "ets clean"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "egg": "^2.6.1",
-    "egg-scripts": "^2.6.0"
+    "egg-scripts": "^2.6.0",
+    "egg-view-nunjucks": "^2.3.0",
+    "mongoose": "^6.0.10"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
