--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "egg-mongoose": "^3.3.1",
     "egg-scripts": "^2.6.0",
     "egg-validate": "^2.0.2",
-    "egg-view-nunjucks": "^2.3.0",
-    "mongoose": "^6.0.10"
+    "egg-view-nunjucks": "^2.3.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
