--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@alicloud/dysmsapi20170525": "^2.0.2",
     "@alicloud/openapi-client": "^0.3.5",
     "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
     "egg": "^2.6.1",
     "egg-bcrypt": "^1.1.0",
     "egg-jwt": "^3.1.7",
