--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "egg-bcrypt": "^1.1.0",
     "egg-jwt": "^3.1.7",
     "egg-mongoose": "^3.3.1",
+    "egg-oss": "^2.0.0",
     "egg-redis": "^2.4.0",
     "egg-scripts": "^2.6.0",
     "egg-validate": "^2.0.2",
@@ -37,9 +38,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose-sequence": "^5.3.1",
     "nanoid": "^3.1.30",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "stream-wormhole": "^1.1.0"
   },
   "devDependencies": {
+    "@types/ali-oss": "^6.16.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
