--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@alicloud/dysmsapi20170525": "^2.0.2",
     "@alicloud/openapi-client": "^0.3.5",
     "axios": "^0.21.4",
+    "busboy": "^0.3.1",
     "dotenv": "^10.0.0",
     "egg": "^2.6.1",
     "egg-bcrypt": "^1.1.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/ali-oss": "^6.16.2",
+    "@types/busboy": "^0.3.1",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
