--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "mongoose-sequence": "^5.3.1",
     "nanoid": "^3.1.30",
     "sharp": "^0.29.3",
-    "stream-wormhole": "^1.1.0"
+    "stream-wormhole": "^1.1.0",
+    "vue": "^3.2.22"
   },
   "devDependencies": {
     "@types/ali-oss": "^6.16.2",
