--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "autod": "autod",
     "lint": "eslint . --ext .ts",
     "clean": "ets clean",
-    "build:template": "npx webpack --config webpack/webpack.config.js"
+    "build:template": "npx webpack --config webpack/webpack.config.js",
+    "upload": "node webpack/uploadToOSS.js"
   },
   "dependencies": {
     "@alicloud/dysmsapi20170525": "^2.0.2",
@@ -64,6 +65,7 @@
     "egg-mock": "^3.16.0",
     "eslint": "^6.7.2",
     "eslint-config-egg": "^8.0.0",
+    "filemanager-webpack-plugin": "^6.1.7",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.5",
     "tslib": "^1.9.0",
