--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@alicloud/dysmsapi20170525": "^2.0.2",
     "@alicloud/openapi-client": "^0.3.5",
+    "@casl/ability": "^5.4.3",
     "axios": "^0.21.4",
     "busboy": "^0.3.1",
     "dotenv": "^10.0.0",
