--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "egg-view-nunjucks": "^2.3.0",
     "jsonwebtoken": "^8.5.1",
     "lego-components": "^0.1.7",
+    "lodash": "^4.17.21",
     "mongoose-sequence": "^5.3.1",
     "nanoid": "^3.1.30",
     "sharp": "^0.29.3",
@@ -52,6 +53,7 @@
     "@types/ali-oss": "^6.16.2",
     "@types/busboy": "^0.3.1",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/lodash": "^4.14.178",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
     "@types/sharp": "^0.29.3",
