--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "egg-scripts": "^2.6.0",
     "egg-validate": "^2.0.2",
     "egg-view-nunjucks": "^2.3.0",
+    "fun5-components-backend": "0.0.2",
     "jsonwebtoken": "^8.5.1",
-    "lego-components": "^0.1.7",
     "lodash": "^4.17.21",
     "mongoose-sequence": "^5.3.1",
     "nanoid": "^3.1.30",
